simple login flow done

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -37,7 +37,7 @@ oauthGrantTitleHtml={0}
 errorTitle=We are sorry...
 errorTitleHtml=We are <strong>sorry</strong> ...
 emailVerifyTitle=Email verification
-emailForgotTitle=Forgot Your Password?
+emailForgotTitle=Recover Password
 updatePasswordTitle=Update password
 codeSuccessTitle=Success code
 codeErrorTitle=Error code\: {0}
@@ -399,3 +399,7 @@ loggingOutImmediately=Logging you out immediately
 accountUnusable=Any subsequent use of the application will not be possible with this account
 userDeletedSuccessfully=User deleted successfully
 
+# Hackthe6ix
+ht6-form-error=Please resolve the following before proceeding on to the next page.
+ht6-form-success=All fields have been filled in correctly.
+ht6-form-alert=Please complete the previous section to edit this page. 
