add ht6 icon and responsive fixes

--- a/login/messages/messages_en.properties
+++ b/login/messages/messages_en.properties
@@ -134,9 +134,13 @@ emailLinkIdp3=to re-send the email.
 emailLinkIdp4=If you already verified the email in different browser
 emailLinkIdp5=to continue.
 
+registerInfo=To begin the application process, please create an account first.
+registerBackToLoginInfo=Already have an account?
+registerBackToLogin=Login
+
 backToLogin=&laquo; Back to Login
 
-emailInstruction=Enter your username or email address and we will send you instructions on how to create a new password.
+emailInstruction=Please enter your email address. We will send you an email to reset your password.
 
 copyCodeInstruction=Please copy this code and paste it into your application:
 
