--- a/theme/login/messages/messages_en.properties
+++ b/theme/login/messages/messages_en.properties
@@ -1,6 +1,8 @@
-loginAccountTitle=Log in
-usernameOrEmail=Email*
+loginAccountTitle=Log In
+usernameOrEmail=Email
+emailPlaceholder=Enter your email address
 password=Password
+passwordPlaceholder=Enter your password
 styles=css/login.css css/styles.css
 scripts=js/script.js
 emailInstruction=Please enter your email address. We will send you an email to reset your password.
