update dark theme colours

--- a/theme/login/messages/messages_en.properties
+++ b/theme/login/messages/messages_en.properties
@@ -7,3 +7,4 @@ styles=css/login.css css/styles.css
 scripts=js/script.js
 emailInstruction=Please enter your email address. We will send you an email to reset your password.
 emailInstructionUsername=Please enter your email address. We will send you an email to reset your password.
+registerTitle=Register
