--- a/theme/login/messages/messages_en.properties
+++ b/theme/login/messages/messages_en.properties
@@ -3,6 +3,7 @@ usernameOrEmail=Email
 emailPlaceholder=Enter your email address
 password=Password
 passwordPlaceholder=Enter your password
+passwordConfirmPlaceholder=Enter your password again
 styles=css/login.css css/styles.css
 scripts=js/script.js
 emailInstruction=Please enter your email address. We will send you an email to reset your password.
