clean up registration page

--- a/theme/account/messages/messages_en.properties
+++ b/theme/account/messages/messages_en.properties
@@ -36,11 +36,11 @@ personalSubMessage=Manage this basic information: your first name, last name and
 
 authenticatorCode=One-time code
 email=Email
-firstName=First name
-givenName=Given name
-fullName=Full name
-lastName=Last name
-familyName=Family name
+firstName=First Name
+givenName=Given Name
+fullName=Full Name
+lastName=Last Name
+familyName=Family Name
 password=Password
 currentPassword=Current Password
 passwordConfirm=Confirmation
